--- a/app/src/main/res/layout/row_category_list_item.xml
+++ b/app/src/main/res/layout/row_category_list_item.xml
@@ -1,11 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="10dp"
     app:cardElevation="6dp">
 
+<androidx.cardview.widget.CardView
+    android:layout_width="100dp"
+    android:layout_height="150dp"
+    app:cardCornerRadius="10dp"
+    android:layout_marginEnd="10dp">
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:id="@+id/iv_imageView"
+            android:background="@color/purple_200"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="category"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textSize="20sp"/>
 
 
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
+    
+
+</RelativeLayout>
