--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/app_bar_main">
+    tools:showIn="@layout/app_bar_main"
+    android:background="@color/purple_200">
 
     <fragment
         android:id="@+id/nav_host_fragment_content_main"
@@ -27,10 +28,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/sv_search"
         android:layout_marginBottom="10dp"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_featured"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/rv_categories"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="10dp" />
 </RelativeLayout>
