--- a/app/src/main/res/layout/row_category_list_item.xml
+++ b/app/src/main/res/layout/row_category_list_item.xml
@@ -28,7 +28,8 @@
             android:text="category"
             android:textAlignment="center"
             android:textStyle="bold"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:id="@+id/tv_categories"/>
 
 
     </LinearLayout>
