--- a/app/src/main/res/layout/row_category_list_item.xml
+++ b/app/src/main/res/layout/row_category_list_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
@@ -9,7 +9,7 @@
     android:layout_width="100dp"
     android:layout_height="150dp"
     app:cardCornerRadius="10dp"
-    android:layout_marginEnd="10dp">
+    android:layout_marginStart="10dp">
     
     <LinearLayout
         android:layout_width="match_parent"
